uddated html to add link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>JS Challenges</title>
 </head>
 <body>
-
+<h2>javaScript30 Coding challenges</h2>
+<ol>
+    <li><a href="/js30-01-DrumKit">Drum Kit</a></li>
+    <li></li>
+</ol>
 </body>
 </html>
