--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h2>javaScript30 Coding challenges</h2>
 <ol>
-    <li><a href="/js30-01-DrumKit">Drum Kit</a></li>
+    <li><a href="/js-challenges/js30-01-DrumKit">Drum Kit</a></li>
     <li></li>
 </ol>
 </body>
